# SynthMT

./: .env  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
examples/: example_full_pipeline.ipynb  example_generate_synthetic_data.ipynb  example_load_SynthMT.ipynb  example_single_frame_generation.ipynb  synthetic_data_example.json  tuning_config_example.json  utils.py
synth_mt/: __init__.py
synth_mt/benchmark/: __init__.py  dataset.py  metrics.py
synth_mt/benchmark/models/: __init__.py  anchor_point_model.py  anystar.py  anystar_default.json  base.py  cellpose_sam.py  cellposesam_default.json  cellposesam_hpo.json  cellsam.py  cellsam_default.json  cellsam_hpo.json  drift.py  factory.py  fiesta.py  fiesta_default.json  fiesta_hpo.json  human.py  human_default.json  micro_sam.py  microsam_default.json  microsam_hpo.json  sam.py  sam2.py  sam2_default.json  sam2_hpo.json  sam3.py  sam3_default.json  sam3_hpo.json  sam3text_default.json  sam3text_hpo.json  sam_default.json  sam_hpo.json  stardist.py  stardist_default.json  stardist_hpo.json  tardis.py  tardis_default.json  tardis_hpo.json
synth_mt/config/: __init__.py  album_config.py  base.py  spots.py  synthetic_data.py  tuning.py
synth_mt/data_generation/: __init__.py  microtubule.py  spots.py  utils.py  video.py
synth_mt/data_generation/optimization/: __init__.py  embeddings.py  eval.py  metrics.py  objective.py  optimization.py
synth_mt/file_io/: __init__.py  utils.py  writers.py
synth_mt/model_hpo/: __init__.py  model_hpo.py
synth_mt/plotting/: __init__.py  plotting.py
synth_mt/utils/: logger.py  matlab.py  postprocessing.py  preprocessing.py  rle.py
tests/: conftest.py  test_benchmark_dataset.py  test_benchmark_models_import.py  test_mt_imports.py
tests/data/: test_config.py  test_loader.py
tests/file_io/: test_writers.py
tests/image_hpo/: test_embeddings.py  test_tuning_logic.py
tests/metrics/: test_metrics.py
tests/model_hpo/: test_model_hpo.py
tests/models/: test_cellposesam.py  test_cellsam.py  test_microsam.py  test_model.py  test_sam.py  test_sam2.py  test_stardist.py  test_tardis.py
tests/video/: test_spot_generator.py
