[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synth_mt"
version = "0.1.1"
description = "SynthMT: Synthetic Data Enables Human-Grade Microtubule Analysis with Foundation Models for Segmentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Mario Koddenbrock", email = "mario.koddenbrock@htw-berlin.de" },
    { name = "Justus Westerhoff", email = "justus.westerhoff@bht-berlin.de" },
    { name = "Dominik Fachet" },
    { name = "Simone Reber" },
    { name = "Felix A. Gers" },
    { name = "Erik Rodner" },
]
maintainers = [
    { name = "Mario Koddenbrock", email = "mario.koddenbrock@htw-berlin.de" },
    { name = "Justus Westerhoff", email = "justus.westerhoff@bht-berlin.de" },
]
keywords = [
    "microtubules",
    "instance-segmentation",
    "synthetic-data",
    "microscopy",
    "deep-learning",
    "SAM",
    "foundation-models",
    "benchmark",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "scikit-image>=0.20.0",
    "pandas>=2.0.0",
    # Image processing
    "opencv-python>=4.7.0",
    "Pillow>=9.4.0",
    "imageio>=2.25.0",
    "tifffile>=2023.2.0",
    "albumentations>=1.3.0",
    # Deep learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # Transformers - Note: for SAM3, use: pip install transformers==5.0.0rc3
    "transformers==5.0.0rc3",
    # HuggingFace ecosystem
    "datasets>=2.14.0",
    "huggingface-hub>=0.17.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Optimization
    "optuna>=3.3.0",
    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
# All models (except µSAM which requires conda)
models = [
    "cellpose>=3.0.0",
    "stardist==0.9.1",
    "tardis-em==0.3.10",
    "lpips>=0.1.4",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "tox>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

# Documentation
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

# All optional dependencies
all = [
    "synth_mt[models,dev,docs]",
]

[project.urls]
Homepage = "https://DATEXIS.github.io/SynthMT-project-page"
Documentation = "https://DATEXIS.github.io/SynthMT-project-page"
Repository = "https://github.com/DATEXIS/SynthMT"
"Bug Tracker" = "https://github.com/DATEXIS/SynthMT/issues"
"Dataset" = "https://huggingface.co/datasets/HTW-KI-Werkstatt/SynthMT"

[project.scripts]
synth-mt-generate = "synth_mt.scripts.generate_synthetic_data:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["synth_mt*"]

[tool.setuptools.package-data]
synth_mt = ["**/*.json"]

# =============================================================================
# Tool configurations
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

